lang/intel-compute-runtime/files/patch-unix
Relax Linux checks for the code works on any non-Windows platform

core/elf/writer.cpp:54:9: error:
      use of undeclared identifier 'memcpy_s'
        memcpy_s(data, queueFront.dataSize, queueFront.data.c_str(), queueFront.dataSize);
        ^
core/elf/writer.cpp:59:13: error:
      use of undeclared identifier 'memcpy_s'
            memcpy_s(curString, queueFront.name.size(), queueFront.name.c_str(), queueFront.name.size());
            ^
core/elf/writer.cpp:76:5: error:
      use of undeclared identifier 'memcpy_s'
    memcpy_s(curSectionHeader, sizeof(SElf64SectionHeader),
    ^

--- shared/source/helpers/string.h.orig	2020-02-28 16:16:42 UTC
+++ shared/source/helpers/string.h
@@ -10,7 +10,7 @@
 #include <memory>
 #include <type_traits>
 
-#if defined(__linux__)
+#if !defined(_WIN32)
 
 #include <cstring>
 #include <errno.h>
